# aigit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  todo.txt
.aigit/: config  config.json  description
.aigit/hooks/: commit-msg  post-receive  pre-commit  pre-receive
.aigit/info/: exclude  repo-id
.aigit/security/: config.json
docs/: docs.md
src/: lib.rs  main.rs
src/ai/: analyzer.rs  gemini.rs  mod.rs
src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  config.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  push.rs  review.rs  status.rs  suggest.rs
src/core/: branch.rs  commit.rs  config.rs  index.rs  mod.rs  object.rs  refs.rs  repository.rs  tree.rs
src/utils/: analyzer.rs  compression.rs  diff.rs  ignore.rs  mod.rs
tests/: integration_tests.rs
