[package]
name = "aigit"
version = "0.1.0"
edition = "2021"
description = "AI-powered version control system"
authors = ["Shubham Yadav <wilfred.shubham@gmail.com>"]
license = "MIT"
repository = "https://github.com/Bas3line/aigit"

[[bin]]
name = "aigit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
indicatif = "0.17"
regex = "1.0"
flate2 = "1.0"
ignore = "0.4"
similar = "2.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
ring = "0.17"
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"
hex = "0.4"
whoami = "1.6.1"
